# Backend-Braincode

./: .env  .gitignore  Cargo.toml
migrations/2024-04-09-045845_database/: up.sql
src/: main.rs  models.rs  schema.rs
