[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["mysql", "uuid", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
serde = { version = "1.0.164", features = ["derive"] }
mysql = "20.1.0"
actix-rt = "2.5"
actix-cors = "0.6.0"
serde_json = "1.0"
